Install Lodash and Fixed the formatting on mobile

--- a/style.css
+++ b/style.css
@@ -1,12 +1,4 @@
 @import url("https://use.typekit.net/jmk3xov.css");
-
-canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-
 :root {
   --dark-bg: rgba(15, 15, 15, 0.55);
   --spacing: 350px;
@@ -40,6 +32,8 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
 }
 
   header {
@@ -80,3 +74,46 @@ canvas {
   .right {
     grid-column: 6 / 12;
   }
+
+  /* Styles for screens with a maximum width of 767 pixels (commonly mobile devices) */
+@media only screen and (max-width: 767px) {
+  header, section, blockquote, .left, .right {
+    grid-column: span 12;
+  }
+
+  header {
+    background: var(--dark-bg);
+    font-size: 2rem;
+    padding: 1rem;
+    margin-bottom: var(--spacing);
+  }
+
+  section {
+    background: var(--dark-bg);
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: var(--spacing);
+  }
+
+  blockquote {
+    background: rgba(15, 15, 15, 0.15);
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: var(--spacing);
+  }
+
+  blockquote ul li {
+    font-weight: normal;
+  }
+
+  .left, .right {
+    grid-column: span 12;
+  }
+
+  /* Additional styles for smaller screens if needed */
+  /* Example: Adjust padding, font sizes, etc. */
+  body {
+    padding: 10px;
+    font-size: 14px;
+  }
+}
